# fourier-or-ml

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  pjme_monthly.yaml  pjme_quick.yaml  smoke.yaml
scripts/: analyze_grid.py  generate_synthetic.py  interpretability.py  make_figures.py  mcb_nemenyi.py  replicate_stability.py  robustness_runs.py  run_all.py  run_backtest.py  run_synthetic_grid.py
src/fourier_or_ml/: __init__.py
src/fourier_or_ml/data/: gefcom.py  pjm.py  synthetic.py
src/fourier_or_ml/evaluation/: backtest.py  dm_test.py  metrics.py
src/fourier_or_ml/features/: build.py  calendar.py  characteristics.py  fourier.py
src/fourier_or_ml/meta/: regression.py
src/fourier_or_ml/models/: base.py  dhr.py  gbm.py  naive.py
tests/: test_fourier.py  test_metrics.py  test_models.py  test_synthetic.py
