[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier-or-ml"
version = "0.1.0"
description = "Characteristic-driven comparison of harmonic regression and gradient boosting for multi-seasonal load forecasting"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
